# big_data_project

./: Cargo.toml  Procfile  diesel.toml
migrations/2024-10-15-101048_create_posts/: down.sql  up.sql
resources/static/templates/: index.html
src/: data.rs  main.rs  models.rs  reddit_scraper.rs  schema.rs  templates.rs
templates/: index.html  results.html
